kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-api
  namespace: incident-api
  labels:
    app: incident-api
    app.kubernetes.io/part-of: incident-api-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-api
  template:
    metadata:
      labels:
        app: incident-api
    spec:
      containers:
        - name: incident-api
          image: quay.io/REPLACE_ORG/incident-api:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
