kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-api
  namespace: incident-api
spec:
  selector:
    app: incident-api
  ports:
    - port: 3000
      targetPort: 3000
